--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@types/express": "^4.17.9",
     "@typescript-eslint/parser": "^4.7.0",
+    "custom-env": "^2.0.1",
+    "dotenv": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.12",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.7.0",
